--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     />
   </head>
   <body>
-    <div class="title font-main">ay q ricooo papii🔥!!</div>
+    <div class="hero">
+      <div class="title font-main">SABOR🔥!!</div>
+      <div class="header"><img src="/images/salsa.jpg" alt="Fania formation"></div>
+      <div class="text text1">
 
-</body>
+        Salsa dance originated in the 1960s and 1970s in New York City, born from the fusion of Cuban son, mambo, cha-cha-cha, and other Latin American rhythms with jazz and rock influences. The term "salsa," meaning "sauce" in Spanish, was coined by music industry executives to market this spicy blend of Latin music to a broader audience. Cuban immigrants fleeing the revolution, along with Puerto Rican communities in New York, played crucial roles in developing and popularizing this vibrant dance form.
+      </div>
+    </div>
+  </body>
 </html>
-
