--- a/index.html
+++ b/index.html
@@ -9,28 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <div class="hero">
-      <div class="title font-main">SABOR🔥!!</div>
-      <div class="content-container">
-        <div class="header">
-          <img src="/images/salsa.jpg" alt="Fania formation" />
-        </div>
-        <div class="text text1">
-          Salsa dance originated in the 1960s and 1970s in New York City, born
-          from the fusion of Cuban son, mambo, cha-cha-cha, and other Latin
-          American rhythms with jazz and rock influences. The term "salsa,"
-          meaning "sauce" in Spanish, was coined by music industry executives to
-          market this spicy blend of Latin music to a broader audience. Cuban
-          immigrants fleeing the revolution, along with Puerto Rican communities
-          in New York, played crucial roles in developing and popularizing this
-          vibrant dance form.
-        </div>
-      </div>
+      <div class="title font-main">SALSA IN THE BRAIN</div>
+<div class="herocontainer"><img class="brain" src="/images/brain.png" alt=""></div>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/HaideeAC" target="_blank">HÁ</a> and is
+        <a href="https://github.com/HaideeAC/Salsa-Project" target="_blank"
+          >open source</a
+        >
+      </footer>
     </div>
   </body>
 </html>
