--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🔥SALSA🪘🪇</title>
+    <title>🍏Apple</title>
     <link rel="stylesheet" href="/styles.css" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="hero">
-      <div class="title font-main">SALSA IN THE BRAIN</div>
+      <div class="title font-main">APPLE</div>
 <div class="herocontainer"><img class="brain" src="/images/brain.png" alt=""></div>
       <footer>
         This project was coded by
