--- a/index.html
+++ b/index.html
@@ -1,72 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🍏Fruit & Brain Health</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="hero">
-      <div class="title font-main">
-        FRUIT <br />
-        BRAIN
-      </div>
-      <div class="mainimg">
-        <img src="/images/brain.png" alt="" onclick="openMenu()" />
-      </div>
-      <div class="text">
-        your brain is literally rewiring itself with every berry you eat! These
-        fruits aren't just "healthy snacks" - they're precision tools for
-        cognitive enhancement.
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/styles.css">
 
-      <footer>
-        This project was coded by
-        <a href="https://github.com/HaideeAC" target="_blank">HÁ</a> and is
-        <a href="https://github.com/HaideeAC/Salsa-Project" target="_blank"
-          >open source</a
-        >
-      </footer>
-    </div>
-
-    <!-- Fullscreen Menu -->
-    <div class="fullscreen-menu" id="fruitMenu">
-      <button class="menu-close" onclick="closeMenu()">&times;</button>
-
-      <div class="menu-text">
-        🧠 Brain-Boosting Superfruits: Your Daily Dose of Genius!<br /><br />
-        Transform your mind with nature's smartest snacks! These colorful
-        champions will literally rewire your brain with every bite. Click on a
-        fruit to discover its incredible cognitive superpowers.
-      </div>
-
-      <div class="fruit-circles">
-        <div class="fruit-circle">
-          <span>🫐<br />Blueberries</span>
-        </div>
-        <div class="fruit-circle">
-          <span>🍓<br />Strawberries</span>
-        </div>
-        <div class="fruit-circle">
-          <span>🥝<br />Kiwi</span>
-        </div>
-        <div class="fruit-circle">
-          <span>🥑<br />Avocado</span>
-        </div>
-        <div class="fruit-circle">
-          <span>🍊<br />Citrus</span>
-        </div>
-      </div>
-    </div>
-
-    <script src="/index.js"></script>
-  </body>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <h1>Welcome to Granada</h1>
+<footer>This project was coded by HÁ and is open sourced on <a href="">GitHub</a></footer>
+</body>
 </html>
