--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🍻GRANADA</title>
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- Fonts -->
@@ -17,9 +17,12 @@
   <body>
     <h1>Welcome to Granada</h1>
     <footer>
-      This project was coded by <a href="https://github.com/HaideeAC" target="_blank">HÁ</a> and
-      is open sourced on
+      This project was coded by
+      <a href="https://github.com/HaideeAC" target="_blank">HÁ</a>, is open
+      sourced on
       <a href="https://github.com/HaideeAC/Granada" target="_blank">GitHub</a>
+      and hosted on
+      <a href="https://granada-tierra.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
