--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
     />
   </head>
   <body>
-    <h1>Welcome to Granada</h1>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/HaideeAC" target="_blank">HÁ</a>, is open
-      sourced on
-      <a href="https://github.com/HaideeAC/Granada" target="_blank">GitHub</a>
-      and hosted on
-      <a href="https://granada-tierra.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Granada</h1>
+        <h2>Andalucia, Spain.</h2>
+        <a href="#more">Learn more</a>
+      </header>
+
+      <footer>
+        This project was coded by
+        <a href="https://github.com/HaideeAC" target="_blank">HÁ</a>, is open
+        sourced on
+        <a href="https://github.com/HaideeAC/Granada" target="_blank">GitHub</a>
+        and hosted on
+        <a href="https://granada-tierra.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
