--- a/index.html
+++ b/index.html
@@ -24,14 +24,65 @@
       </header>
 
       <footer>
-        This project was coded by
-        <a href="https://github.com/HaideeAC" target="_blank">HÁ</a>, is open
-        sourced on
-        <a href="https://github.com/HaideeAC/Granada" target="_blank">GitHub</a>
-        and hosted on
-        <a href="https://granada-tierra.netlify.app/" target="_blank"
-          >Netlify</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Granada</h3>
+            
+            <ul>
+              <li>
+                <a
+                  href="https://www.alsa.es/estaciones/estacion-granada"
+                  target="_blank"
+                  >Granada Bus Station</a
+                >
+              </li>
+              
+              <li>
+                <a
+                  href="https://www.aena.es/en/f.g.l.-granada-jaen.html"
+                  target="_blank"
+                  >Granada Airport website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/38oPHgwhkLZYY6V56"
+                  target="_blank"
+                  >Map of Granada</a
+                >
+              </li>
+              <li>
+                <a
+                  href="http://www.movilidadgranada.com/busurbano_index.php"
+                  target="_blank"
+                  >Public Transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Haidée and I spent most of my childhood and teenage
+              years in Granada. I am very fond of this city. I've created this
+              page as part of a project to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            This project was coded by
+            <a href="https://github.com/HaideeAC" target="_blank">HÁ</a>, is
+            open sourced on
+            <a href="https://github.com/HaideeAC/Granada" target="_blank"
+              >GitHub</a
+            >
+            and hosted on
+            <a href="https://granada-tierra.netlify.app/" target="_blank"
+              >Netlify</a
+            >
+          </div>
+        </section>
       </footer>
     </div>
   </body>
